--- a/src/manifest.json
+++ b/src/manifest.json
@@ -19,7 +19,7 @@
   "content_scripts": [
     {
       "matches": ["https://chat.openai.com/*"],
-      "js": ["content.js"]
+      "js": ["chatgpt_content.js"]
     }
   ],
 
