feat: support bing chat

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/parser": "^7.22.14",
     "@chakra-ui/icons": "^2.1.0",
     "@chakra-ui/react": "^2.8.0",
+    "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "framer-motion": "^10.16.2",
