--- a/src/manifest.json
+++ b/src/manifest.json
@@ -26,7 +26,7 @@
       "js": ["bard_content.js"]
     },
     {
-      "matches": ["https://chat.openai.com/*"],
+      "matches": ["https://chatgpt.com/*"],
       "js": ["chatgpt_content.js"]
     }
   ],
