--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "postbuild": "node postBuild.js"
   },
   "devDependencies": {
-    "@rspack/cli": "^0.1.9",
+    "@rspack/cli": "^1.0.9",
+    "@rspack/core": "^1.0.9",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "@types/webextension-polyfill": "^0.10.0",
@@ -18,8 +19,7 @@
     "eslint": "^8.40.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react": "^7.32.2",
-    "sass": "^1.62.1",
-    "sass-loader": "^13.2.2"
+    "html-webpack-plugin": "^5.6.0"
   },
   "dependencies": {
     "@babel/parser": "^7.22.14",
